syntax = "proto3";

package io.analog.alex.grpcserver;

option java_multiple_files = true;
option java_outer_classname = "GreetingProto";

message GreetingRequest {
  string name = 1;
  string author = 2;
  string message = 3;
  int32 order = 4;
}

message GreetingResponse {
  string greet = 1;
}

service GreetingService {
  rpc sayHello (GreetingRequest) returns (GreetingResponse) {}
  rpc sayHellos (GreetingRequest) returns (stream GreetingResponse) {}
}


